objects/Case_Origin_Value__mdt.object
<CustomObject>
    <fields>
        <fullName>CaseTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CaseTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Origin_Value__c</fullName>
        <label>Origin Value</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>RecordType</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Case Origin Value</label>
    <pluralLabel>Case Origin Values</pluralLabel>
</CustomObject>